--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "homepage": "https://atlasgrowth.github.io/plumbing",
   "scripts": {
     "dev": "tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist/public",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push",
-    "predeploy": "vite build --base=/plumbing/",
-    "deploy": "gh-pages -d dist"
+    "db:push": "drizzle-kit push"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
